# wasm-encoder

./: .gitignore  LICENSE  flake.nix  wasm-encoder.cabal
src/Language/Wasm/: Encoder.hs
src/Language/Wasm/Encoder/: Instruction.hs  Section.hs  Types.hs
test/: Main.hs
test/golden/: example.wasm
