name:           wasm-encoder
version:        0.0.1
synopsis:       A low-level WebAssembly encoder
description:    Encoding library for binary WebAssembly (.wasm) files. Supporting modern extensions such as GC, tail calls, SIMD, etc.
author:         Brian McKenna
maintainer:     brian@brianmckenna.org
license:        MIT
license-file:   LICENSE
build-type:     Simple
category:       Language
homepage:       https://github.com/puffnfresh/wasm-encoder
bug-reports:    https://github.com/puffnfresh/wasm-encoder
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/puffnfresh/wasm-encoder

library
  exposed-modules:
      Language.Wasm.Encoder
      Language.Wasm.Encoder.Instruction
      Language.Wasm.Encoder.Section
      Language.Wasm.Encoder.Types
  hs-source-dirs: src
  build-depends:
      base >= 4.6 && < 5
    , bytestring >= 0.11 && < 0.12
    , cereal >= 0.5 && < 0.6
  default-language: Haskell2010

test-suite wasm-encoder-tests
  main-is: Main.hs
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  build-depends:
      base
    , wasm-encoder
    , bytestring
    , cereal
    , filepath >= 1.4 && < 1.5
    , tasty >= 1.4 && < 1.5
    , tasty-golden >= 2.3 && < 2.4
  default-language: Haskell2010
